config/istio/_ytt_lib/istio/peer-auth-fluentd.yaml
---
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: fluentd-allow-plaintext
  namespace: cf-system
spec:
  selector:
    matchLabels:
      app: fluentd
  mtls:
    mode: PERMISSIVE
