config/istio/_ytt_lib/istio/app-sidecar.lib.yaml
#@ def app_sidecar():
---
apiVersion: networking.istio.io/v1alpha3
kind: Sidecar
metadata:
  name: default
  namespace: cf-workloads
spec:
  egress:
  - hosts:
    - "cf-system/*"
#@ end
